<resources>
    <string name="app_name">BenZ</string>
    <string name="title_activity_main2">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!--    <style name="custom_seekbar" parent="@android:style/Widget.SeekBar">-->
    <!--        <item name="android:maxHeight">8dp</item>-->
    <!--        <item name="android:indeterminateOnly">false</item>-->
    <!--        <item name="android:indeterminateDrawable">@android:drawable/progress_indeterminate_horizontal</item>-->
    <!--        <item name="android:progressDrawable">@drawable/seekbar_horizontal</item>-->
    <!--        <item name="android:minHeight">8dp</item>-->
    <!--        <item name="android:thumb">@android:color/transparent</item>-->
    <!--        <item name="android:thumbOffset">10dp</item>-->
    <!--    </style>-->

    <!-- 键盘自定义按键，这只是DEMO，你可以自定义自己的 -->
    <string name="keycode_space">62</string> <!-- 空格 -->
    <string name="keycode_center">66</string> <!-- 回车 -->
    <string name="keycode_back">4</string> <!-- 返回 -->
    <string name="keycode_left">21</string> <!-- 左边 -->
    <string name="keycode_right">22</string> <!-- 右边 -->
    <string name="keycode_del">67</string> <!-- 删除 -->


    <!-- viewpager 标题栏字体-->
    <string name="fzlt_zhun_hei">FZLTZHUNHEI_GBK.ttf</string>
    <string name="fzlt_cu_hei">FZLTHC_GBK.ttf</string>

    <string name="nav_tab_normal_ttf">@string/fzlt_zhun_hei</string>
    <string name="nav_tab_focus_ttf">@string/fzlt_cu_hei</string>
    <string name="app_auto">gaode</string>
    <string name="cruise_control_breakdown">故障</string>
    <string name="cruise_control_stop">定速巡航停止运作</string>
    <string name="cruise_control_wait_set">- - -</string>
    <string name="cruise_control_set">- - -</string>
    <string name="company">大川广州汽车服务有限公司</string>
    <string name="company_mobile">电话号码：139 2608 8851</string>
    <string name="start_test">开始测试</string>
    <string name="maintain">保养</string>
    <string name="assist">辅助</string>
    <string name="mileage">行程</string>
    <string name="navigation">导航</string>
    <string name="fm">收音机</string>
    <string name="phone">电话</string>
    <string name="music">媒体</string>
    <string name="mile_unit">km</string>
    <string name="left_mile_unit">km/h</string>
    <string name="message">信息</string>
    <string name="tyre">轮胎</string>
    <string name="coolant_liquid">冷却液</string>
    <string name="speed_calibration">时速校准</string>
    <string name="engine_oil_level">发动机机油液位</string>
    <string name="front_left">前左</string>
    <string name="front_right">前右</string>
    <string name="rear_left">后左</string>
    <string name="rear_right">后右</string>
    <string name="alert_33d_01">清洁燃油滤清器</string>
    <string name="alert_33d_40">更换空气滤清器</string>
    <string name="alert_33d_04">油箱盖开启</string>
    <string name="alert_2fa_1_40">检测制动液液面</string>
    <string name="alert_2fa_1_20">加注风挡玻璃水</string>
    <string name="alert_2fa_1_10">加注防冻液参见用户手册</string>
    <string name="alert_279_1_10">车身升起</string>
    <string name="alert_279_1_01">停车\n车身太低</string>
    <string name="alert_279_1_04">故障</string>
    <string name="alert_279_1_02">车辆正在被升起请稍后</string>
    <string name="alert_2f8_2_40">钥匙探测不到</string>
    <string name="tire_pressure_display">胎压显示</string>
    <string name="maintain_hint">下次保养在10000 <tag>unit</tag> 之后</string>
    <string name="exceed">超过</string>
    <string name="timely_maintenance">, 请及时保养</string>
    <string name="next_scheduled_maintenance">下次保养在</string>
    <string name="after_mile"> 之后</string>
    <string name="calibrated_speed">校准的时速</string>
    <string name="speed_unit">km/h</string>
    <string name="read_speed">读取的时速</string>
    <string name="engine_oil_hint1">发动机机油液位等待时间不足</string>
    <string name="engine_oil_hint2">发动机机油液位正常</string>
    <string name="engine_oil_hint3">发动机机油液位过高</string>
    <string name="engine_oil_hint4">发动机机油液位过低</string>
    <string name="engine_oil_hint5">发动机机油液位\n测试失败，请重试</string>
    <string name="engine_oil_hint6">发动机机油液位\n测量进行中,只有当车辆水平时测量结果才准确</string>
    <string name="engine_oil_hint7">发动机机油液位\n在发动机运行时请勿检查</string>
    <string name="driving_direction">行驶方向</string>
    <string name="southeast">东南</string>
    <string name="past_destinations">以往的目的地</string>
    <string name="north">北</string>
    <string name="northeast">东北</string>
    <string name="east">东</string>
    <string name="south">南</string>
    <string name="southwest">西南</string>
    <string name="west">西</string>
    <string name="northwest">西北</string>
    <string name="last_break">上次休息</string>
    <string name="hours_ago">小时前</string>
    <string name="attention_assist_system">注意力辅助系统</string>
    <string name="attention_level">注意力等级</string>
    <string name="high">高</string>
    <string name="low">低</string>
    <string name="fm_radio">FM收音机</string>
    <string name="bluetooth_is_in_use">蓝牙正在使用</string>
    <string name="please_connect_bluetooth">请链接蓝牙</string>
    <string name="phonebook">电话本</string>
    <string name="phonebook_hint">请链接蓝牙获取电话本</string>
    <string name="during_a_call">通话中</string>
    <string name="answer">接通</string>
    <string name="hangup">挂断</string>
    <string name="error_hint">请勿\n疲劳\n驾驶</string>
    <string name="potential_driving_distance">可行驶距离</string>
    <string name="energy_consumption">油耗</string>
    <string name="after_averaging">自动平均后</string>
    <string name="after_starting_up">启动后</string>
    <string name="reset_or_not">是否复位</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="after_resetting">复位后</string>
    <string name="only_remaining">仅剩</string>
    <string name="message1">保养过了</string>
    <string name="message2">已经行驶</string>
    <string name="message3">需要进行保养</string>
    <string name="theme">主题</string>
    <string name="classic">经典</string>
    <string name="avant_garde">前卫</string>
    <string name="sport">运动</string>
    <string name="downloading">下载中</string>
    <string name="version_update">版本更新</string>
    <string name="tech">科技</string>
    <string name="after_launcher">启动后</string>
    <string name="total_distance">总距离</string>
    <string name="option">选项</string>
    <string name="reset_launcher_after">启动后复位</string>
    <string name="after_recovery_reset">复位后复位</string>
    <string name="attention_assist_system_not_activate">上次休息 0 分钟前</string>
    <string name="system_standby">系统待机</string>
    <string name="info_storage">信息存储器</string>
    <string name="warn_message_number">警告信息：0</string>
    <string name="maintain_hint_title">保养提示系统</string>
    <string name="coolant_temperature">冷却液温度</string>
    <string name="oilLevelInfo1">发动机机油液位正常</string>
    <string name="oilLevelInfo2">发动机机油液位过高</string>
    <string name="oilLevelInfo3">发动机机油液位过低</string>
    <string name="check_oil_level">下一次加油时检查发动机油液位</string>
    <string name="gravity">重力</string>
    <string name="engine_data">发动机数据</string>
    <string name="oilLevelInfo4">发动机机油液位正在测量</string>
    <string name="oilLevelInfo5">发动机机油液位过低</string>
    <string name="unzip">解压中</string>
    <string name="updating">更新中</string>
    <string name="cancel">取消</string>
    <string name="map">地图</string>
    <string name="alert_305_5_02">副驾驶气囊关闭参见用户手册</string>
    <string name="alert_180_2_01">预防性安全系统\n停止运作参见用户手册</string>
    <string name="alert_375_8_80">后排中部故障\n请去特许服务中心</string>
    <string name="alert_375_8_40">左后侧故障\n请去特许服务中心</string>
    <string name="alert_375_8_20">后右侧故障\n请去特许服务中心</string>
    <string name="alert_375_8_10">后排中部故障\n请去特许服务中心</string>
    <string name="alert_375_8_08">后左侧故障\n请去特许服务中心</string>
    <string name="alert_375_8_04">前后侧故障\n请去特许服务中心</string>
    <string name="alert_375_8_02">前左侧故障\n请去特许服务中心</string>
    <string name="alert_375_8_01">防护系统故障请去特许服务中心</string>
    <string name="alert_375_9_08">儿童座椅安装不当\n参见用户手册</string>
    <string name="alert_375_9_04">右车窗气帘故障\n请去特许服务中心</string>
    <string name="alert_375_9_02">左车窗气帘故障\n请去特许服务中心</string>
    <string name="alert_375_9_01">后右侧故障，请去特许服务中心</string>
    <string name="alert_181_2_01">预防性安全系统\n停止运作参见用户手册</string>
    <string name="attention_assist_system_warn">请勿疲劳驾驶</string>
    <string name="kilometre">公里</string>
    <string name="enter_into">进入</string>
    <string name="m">米</string>
    <string name="usb_interrupt_hint">通信中断</string>
    <string name="surplus">剩余</string>
    <string name="hour">小时</string>
    <string name="minute">分</string>
    <string name="not_usb_serialdriver">没有获取到USB设备驱动程序</string>
    <string name="usb_open_device_fail">打开USB设备失败</string>
    <string name="usb_open_port_fail">打开USB端口失败</string>
    <string name="not_usb_device">没有获取到USB设备</string>
</resources>