<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/titleTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:maxLines="3"
        android:text="@string/after_starting_up"
        android:textColor="@color/colorWhite"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subTitleTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center|bottom"
        android:text="@string/reset_or_not"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTV"
        android:layout_marginTop="@dimen/sp_20"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/yesTV"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:background="@drawable/item_selector"
        android:gravity="center"
        android:text="@string/yes"
        android:textColor="@color/colorWhite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/noTV"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:gravity="center"
        android:text="@string/no"
        android:textColor="@color/colorWhite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/yesTV"
        android:textSize="13sp" />

</androidx.constraintlayout.widget.ConstraintLayout>