<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical">


        <TextView
            android:id="@+id/titleTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center|bottom"
            android:text="@string/speed_calibration"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="60dp"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/currentSpeedTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:layout_gravity="center_horizontal"
            android:textSize="16sp"
            android:text="@string/read_speed"
            android:layout_marginTop="40dp"
            />

        <TextView
            android:id="@+id/speedAdjustTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:text="1.01"
            android:textColor="@color/colorWhite"
            />


        <TextView
            android:id="@+id/adjustSpeedTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:layout_gravity="center_horizontal"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:text="@string/calibrated_speed"
            />
    </LinearLayout>
</FrameLayout>