<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/titleTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/speed_calibration"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="20dp"
        android:textSize="26dp" />

    <TextView
        android:id="@+id/currentSpeedTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        android:layout_gravity="center_horizontal"
        android:textSize="22sp"
        android:text="@string/read_speed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/speedAdjustTV"
        android:layout_marginBottom="20dp"
        />

    <TextView
        android:id="@+id/speedAdjustTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="26dp"
        android:layout_marginTop="20dp"
        android:text="1.01"
        android:textColor="@color/colorWhite"
        />


    <TextView
        android:id="@+id/adjustSpeedTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/speedAdjustTV"
        android:textSize="22sp"
        android:layout_marginTop="20dp"
        android:text="@string/calibrated_speed"
        />
</androidx.constraintlayout.widget.ConstraintLayout>