<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/attention_nav"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >
    <!--    android:layout_marginTop="150px"-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:orientation="vertical">
        <!--        android:background="@drawable/nav_meter_maintain_seletor"-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40px">

            <TextView
                android:id="@+id/titleTV"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/attention_assist_system"
                android:textColor="@color/colorWhite"
                android:textSize="48px" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40px">

            <TextView
                android:id="@+id/rest_time"
                android:layout_width="match_parent"
                android:layout_height="40px"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/colorWhite"
                android:textSize="20px" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/degree_attention_text_seek_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40px"
            android:orientation="vertical">

            <TextView
                android:id="@+id/degree_attention_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/attention_level"
                android:textColor="@color/colorWhite"
                android:textSize="20px" />

            <com.android.launcher.view.AttentionProgressBarView
                android:id="@+id/degree_seek_bar"
                android:layout_width="283px"
                android:layout_height="20px"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="6dp" />

            <LinearLayout
                android:layout_width="283px"
                android:layout_height="30px"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="6dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/lowTV"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/low"
                        android:textColor="@color/colorWhite"
                        android:textSize="20px" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="right"
                    android:layout_weight="1"
                    android:gravity="right">

                    <TextView
                        android:id="@+id/highTV"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/high"
                        android:textColor="@color/colorWhite"
                        android:textSize="20px" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>